<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:clickable="false"
    android:focusable="false">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="false"
        android:focusable="false" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/overlay_scrim"
        android:clickable="false"
        android:focusable="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/overlay_controls_padding"
            android:background="@drawable/overlay_controls_background">

            <Button
                android:id="@+id/overlay_seek_backward"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/overlay_controls_spacing"
                android:text="@string/overlay_control_rewind" />

            <Button
                android:id="@+id/overlay_play_pause"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/overlay_controls_spacing"
                android:text="@string/overlay_control_play" />

            <Button
                android:id="@+id/overlay_seek_forward"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overlay_control_forward" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
